tests/snapshots/e2e_snapshot_test__list_nested_directories.snap
---
source: tests/e2e_snapshot_test.rs
expression: lines
---
[
    "📂  /test",
    "╔══════════════════════════════════════════════════════════════════════════════════════════════════╗",
    "║>> ▼   test                                                                                       ║",
    "║       • 001_init.sql                                                                             ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "║                                                                                                  ║",
    "╚══════════════════════════════════════════════════════════════════════════════════Press h for help╝",
]
